--- a/src/scripts/views/index.html
+++ b/src/scripts/views/index.html
@@ -6,7 +6,6 @@
     <title>Financial Tracker</title>
 </head>
 <body>
-    <h1>Hello World!?</h1>
-    <a href="about.html">About</a>
+    <div id="container"></div>
 </body>
 </html>
