feat: init expense form

--- a/src/scripts/views/index.html
+++ b/src/scripts/views/index.html
@@ -6,6 +6,7 @@
     <title>Financial Tracker</title>
 </head>
 <body>
+    <a href="expense-schedule-view.html">Expense Schedule</a>
     <div id="container"></div>
 </body>
 </html>
